--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -55,14 +55,14 @@ spec:
     - name: tests
       workspaces:
         - name: source
-          workspace: pipeline-workspace          
+          workspace: pipeline-workspace
       taskRef:
         name: nose
       params:
       - name: database_uri
         value: "sqlite:///test.db"
       - name: args
-        value: ["-v", "--with-spec", "--spec-color"]
+        value: "-v --with-spec --spec-color"
       runAfter:
         - clone
 
