--- a/tekton/tasks.yaml
+++ b/tekton/tasks.yaml
@@ -57,15 +57,15 @@ metadata:
   name: nose
 spec:
   description: This task will run nosetests on the provided input.
-  workspaces: 
+  workspaces:
     - name: source
   params:
     - name: args
-      description: This will run nosetests
+      description: Arguments to pass to nose
       type: string
       default: "-v"
     - name: database_uri
-      description: This will test database
+      description: Database connection string
       type: string
       default: "sqlite:///test.db"
   steps:
@@ -79,9 +79,9 @@ spec:
         #!/bin/bash
         set -e
 
-        echo "Installing dependencies"
+        echo "***** Installing dependencies *****"
         python -m pip install --upgrade pip wheel
         pip install -qr requirements.txt
-        echo "Running nosetests with $(params.args)"
+
+        echo "***** Running nosetests with: $(params.args)"
         nosetests $(params.args)
-      
